@startuml

hide circle

note as G1
  ・テーブル名は単数形で統一する
  ・全てのカラムがNOT NULLなので記述を省略している
end note

entity user {
  *user_id : int <<PK>>
  --
  username : text
  password_hash : text
  created_at : datetime
  updated_at : datetime
}

entity media {
  *media_id : int <<PK>>
  --
  title : text
  created_at : datetime
  updated_at : datetime
}

entity item {
  *item_id : int <<PK>>
  --
  media_id : int <<FK>>
  item_path : text
  thumbnail_path : text
  page : int
  <<unique(media_id, page)>>
}

entity favorite {
  *favorite_id : int <<PK>>
  *user_id : int <<FK>>
  *media_id : int <<FK>>
  --
  added_at : datetime
  <<unique(user_id, media_id)>>
}
note bottom: favorite_idとadded_atで追加順を一意とする

entity queue {
  *queue_id : int <<PK>>
  *user_id : int <<FK>>
  *media_id : int <<FK>>
  --
  added_at : datetime
  <<unique(user_id, media_id)>>
}
note bottom: queue_idとadded_atで追加順を一意とする

entity category {
  *category_id : int <<PK>>
  --
  name : text
  <<unique(name)>>
}

entity tag {
  *tag_id : int <<PK>>
  --
  category_id : int <<FK>>
  name : text
  <<unique(category_id, name)>>
}

entity media_tag {
  *media_id : int <<PK>> <<FK>>
  *tag_id : int <<PK>> <<FK>>
}

user ||--o{ favorite
user ||--o{ queue
media ||-u-|{ item
media ||--o{ favorite
media ||--o{ queue
media ||--o{ media_tag
tag ||--o{ media_tag
category ||--o{ tag
@enduml
